Reduce padding-top for preventing scrollbar from appearing on some screens

--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -3,6 +3,9 @@ body {
     font-size: calc(10px + 0.33vw);
     -webkit-font-smoothing: antialiased;
     margin: 0;
-    padding: 4.0vh 10.4vw 0 10.4vw;
+    padding-top: 3.4vh;
+    padding-right: 10.4vw;
+    padding-bottom: 0;
+    padding-left: 10.4vw;
     color: var(--font-color);
 }
